--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,3 +1,11 @@
+:root {
+  /* Color Variables */
+  --primary-color: black;
+  --text-color-primary: white;
+  --accent-color-primary: rgb(112, 112, 243);
+  --accent-color-secondary: rgb(116, 116, 255);
+}
+
 .App {
   text-align: center;
 }
@@ -14,9 +22,19 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--text-color-primary);
 }
 
 .App-link {
   color: #09d3ac;
+}
+
+#root {
+  background-color: black;
+  color: var(--text-color-primary);
+  min-height: 100vh;
+}
+
+.div-app {
+  padding: 10px 25px;
 }
